Ajout du controle de code source

--- a/PoC_MongoDB/PoC_MongoDB/packages.config
+++ b/PoC_MongoDB/PoC_MongoDB/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Carbon.Data.Protection" version="0.16.0" targetFramework="net461" />
+  <package id="Carbon.Json" version="1.6.0" targetFramework="net461" />
+  <package id="Carbon.Packaging" version="1.24.0" targetFramework="net461" />
+  <package id="Carbon.Storage" version="1.13.0" targetFramework="net461" />
+  <package id="Carbon.VersionControl" version="1.7.0" targetFramework="net461" />
+  <package id="Carbon.Versioning" version="1.4.0" targetFramework="net461" />
   <package id="DnsClient" version="1.0.7" targetFramework="net461" />
+  <package id="GitHub" version="1.11.2" targetFramework="net461" />
   <package id="ImpromptuInterface" version="5.6.7" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
@@ -11,4 +18,6 @@
   <package id="MongoDB.Dynamic" version="1.1.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
 </packages>
