--- a/PoC_MongoDB/PoC_MongoDB/PoC_MongoDB.csproj
+++ b/PoC_MongoDB/PoC_MongoDB/PoC_MongoDB.csproj
@@ -253,6 +253,7 @@
     <Compile Include="Masterpage.Master.designer.cs">
       <DependentUpon>Masterpage.Master</DependentUpon>
     </Compile>
+    <Compile Include="Objets\Tarifs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup>
